subversion 1.8 does not support meld anymore

--- a/templates/svn-merge-meld.sh.j2
+++ b/templates/svn-merge-meld.sh.j2
@@ -1,22 +1,34 @@
-#!/bin/bash
+#!/bin/bash -x
 
-base=${1?1st argument is 'base' file}
-theirs=${2?2nd argument is 'theirs' file}
-mine=${3?3rd argument is 'mine' file}
-merged=${4?4th argument is 'merged' file}
-version=$(meld --version | perl -pe '($_)=/([0-9]+([.][0-9]+)+)/' )    
-
-if [[ "$version" < 1.7 ]]
+subversion_version=$(svn --version  | head -1 | perl -pe '($_)=/([0-9]+([.][0-9]+))/' )
+if [[ "$subversion_version" < 1.8 ]]
 then
-  #old meld version 1.6.* = three input files
-  cat "$mine" > "$merged"
-  meld --label="Base=${base##*/}"           "$base"   \
-       --label="Mine->Merged=${merged##*/}" "$merged" \
-       --label="Theirs=${theirs##*/}"       "$theirs"
+  base=${1?1st argument is 'base' file}
+  theirs=${2?2nd argument is 'theirs' file}
+  mine=${3?3rd argument is 'mine' file}
+  merged=${4?4th argument is 'merged' file} 
+  concerned_file=$5 #Fifth argument is not used by meld
+  
+  meld_version=$(meld --version | perl -pe '($_)=/([0-9]+([.][0-9]+))/' )    
+  
+  if [[ "$meld_version" < 1.7 ]]
+  then
+    #old meld version 1.6.* = three input files
+    cat "$mine" > "$merged"
+    meld --label="Base=${base##*/}"           "$base"   \
+         --label="Mine->Merged=${merged##*/}" "$merged" \
+         --label="Theirs=${theirs##*/}"       "$theirs"
+  else
+    # recent meld versions 1.7.* 1.8.* and above = four input files
+    meld --label="Base=${base##*/}"           "$base"   \
+         --label="Mine=${mine##*/}"           "$mine"   \
+         --label="Merged=${merged##*/}"       "$merged" \
+         --label="Theirs=${theirs##*/}"       "$theirs"
+  fi
+  
 else
-  # recent meld versions 1.7.* and above = four input files
-  meld --label="Base=${base##*/}"           "$base"   \
-       --label="Mine=${mine##*/}"           "$mine"   \
-       --label="Merged=${merged##*/}"       "$merged" \
-       --label="Theirs=${theirs##*/}"       "$theirs"
+ #http://mail-archives.apache.org/mod_mbox/subversion-users/201403.mbox/%3C1396288692.50431.YahooMailNeo@web124906.mail.ne1.yahoo.com%3E
+ echo "Merging option with GUI tools has been removed from subversion"
+ echo "Please now use command : meld . (with the dot)"
 fi
+
