--- a/templates/svn-merge-meld.sh.j2
+++ b/templates/svn-merge-meld.sh.j2
@@ -1,4 +1,4 @@
-#!/bin/bash -x
+#!/bin/bash
 
 subversion_version=$(svn --version  | head -1 | perl -pe '($_)=/([0-9]+([.][0-9]+))/' )
 if [[ "$subversion_version" < 1.8 ]]
@@ -28,7 +28,7 @@ then
   
 else
  #http://mail-archives.apache.org/mod_mbox/subversion-users/201403.mbox/%3C1396288692.50431.YahooMailNeo@web124906.mail.ne1.yahoo.com%3E
- echo "Merging option with GUI tools has been removed from subversion"
- echo "Please now use command : meld . (with the dot)"
+ echo "Merging option with GUI tools has been removed from subversion" > &2
+ echo "Please now use command : meld . (with the dot)" > &2
 fi
 
