--- a/templates/svn-merge-meld.sh.j2
+++ b/templates/svn-merge-meld.sh.j2
@@ -26,9 +26,9 @@ then
          --label="Theirs=${theirs##*/}"       "$theirs"
   fi
   
-else
+#else
  #http://mail-archives.apache.org/mod_mbox/subversion-users/201403.mbox/%3C1396288692.50431.YahooMailNeo@web124906.mail.ne1.yahoo.com%3E
- echo "Merging option with GUI tools has been removed from subversion" > &2
- echo "Please now use command : meld . (with the dot)" > &2
+ #echo "Merging option with GUI tools has been removed from subversion" > &2
+ #echo "Please now use command : meld . (with the dot)" > &2
 fi
 
